--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <style type="text/css">
+    	html {
+		  scroll-behavior: smooth;
+		}
     	a{
     		margin: 5px;
     	}
@@ -42,56 +45,70 @@
     <title>Hadoop on windows</title>
   </head>
   <body>
+  	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse left" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link" href="#inst">Install-Hadoop</a>
+          <a class="nav-item nav-link" href="#mapred">Wordcount-Mapreduce</a>
+        </div>
+      </div>
+    </nav>
   	<br>
+  	<br>
+  	<hr>
   	<div class="container">
-  		<h3>Installing and Setting up Hadoop on Windows</h3>
-  		<hr>
-	  	<h4>1. Download required files:</h4>
-	  	<hr>
-  		<ul class="list-group list-group-horizontal">
-		  <li class="list-group-item">Download hadoop: <a class="btn btn-success" href="https://drive.google.com/file/d/1VFAvD6GqPwEK0JCBXTxnswqa-IlPTcoV/view?usp=sharing" target="_blank" download><i class="fa fa-download"></i> hadoop-2.8.0.rar</a></li>
-		  <li class="list-group-item">Download java: <a class="btn btn-success" href="https://drive.google.com/file/d/13tmshcIQ5CZs8iVVGiQbO4xwEZRo3wKU/view?usp=sharing" target="_blank" download><i class="fa fa-download"></i> java.zip</a></li>
-		  <li class="list-group-item">Download winutils: <a class="btn btn-success" href="./downloads/winutils-bin.zip"><i class="fa fa-download"></i> winutils-bin.zip</a></li>
-		</ul>
-		<hr>
+  		<section id="inst">
+	  		<h3>Installing and Setting up Hadoop on Windows</h3>
+	  		<hr>
+		  	<h4>1. Download required files:</h4>
+		  	<hr>
+	  		<ul class="list-group list-group-horizontal">
+			  <li class="list-group-item">Download hadoop: <a class="btn btn-success" href="https://drive.google.com/file/d/1VFAvD6GqPwEK0JCBXTxnswqa-IlPTcoV/view?usp=sharing" target="_blank" download><i class="fa fa-download"></i> hadoop-2.8.0.rar</a></li>
+			  <li class="list-group-item">Download java: <a class="btn btn-success" href="https://drive.google.com/file/d/13tmshcIQ5CZs8iVVGiQbO4xwEZRo3wKU/view?usp=sharing" target="_blank" download><i class="fa fa-download"></i> java.zip</a></li>
+			  <li class="list-group-item">Download winutils: <a class="btn btn-success" href="./downloads/winutils-bin.zip"><i class="fa fa-download"></i> winutils-bin.zip</a></li>
+			</ul>
+			<hr>
 
 
-	  	<h4>2. Installation and setup:</h4>
-	  	<hr>
-	  	<ul class="list-group">
-		  <li class="list-group-item">Extract <b>hadoop-2.8.0.zip</b> in <code>c:\</code></li>
-		  <li class="list-group-item">Extract <b>java.zip</b> in <code>c:\</code></li>
-		  <li class="list-group-item">Extract <b>winutils-bin.zip</b> in <code>c:\hadoop-2.8.0</code></li>
-		  <li class="list-group-item">set environment variables:
-		  	<ul>
-		  		<li><code>HADOOP_HOME = c:\hadoop-2.8.0</code></li>
-		  		<li><code>JAVA_HOME = c:\java</code></li>
-		  		<li><code>path = c:\java\bin; c:\hadoop-2.8.0\bin</code></li>
-		  	</ul>
-		  </li>
-		</ul>
-		<hr>
+		  	<h4>2. Installation and setup:</h4>
+		  	<hr>
+		  	<ul class="list-group">
+			  <li class="list-group-item">Extract <b>hadoop-2.8.0.zip</b> in <code>c:\</code></li>
+			  <li class="list-group-item">Extract <b>java.zip</b> in <code>c:\</code></li>
+			  <li class="list-group-item">Extract <b>winutils-bin.zip</b> in <code>c:\hadoop-2.8.0</code></li>
+			  <li class="list-group-item">set environment variables:
+			  	<ul>
+			  		<li><code>HADOOP_HOME = c:\hadoop-2.8.0</code></li>
+			  		<li><code>JAVA_HOME = c:\java</code></li>
+			  		<li><code>path = c:\java\bin; c:\hadoop-2.8.0\bin</code></li>
+			  	</ul>
+			  </li>
+			</ul>
+			<hr>
 
 
-		<h4>3. Configuration:</h4>
-		<hr>
-		<ul class="list-group">
-		  <li class="list-group-item">
-		  	<ul>
-		  		<li>create new folder <b>data</b> in <code>c:\hadoop-2.8.0\</code></li>
-		  		<li>create new folder <b>datanode</b> in <code>c:\hadoop-2.8.0\data</code></li>
-		  		<li>create new folder <b>namenode</b> in <code>c:\hadoop-2.8.0\data</code></li>
-		  	</ul>
-		  </li>
-		</ul>
-		<br>
-		<h5>Go to <code>c:\hadoop-2.8.0\etc\hadoop\</code></h5>
-		<ul class="list-group">
-			<li>download and replace xml files: <a class="btn btn-success" href="./downloads/xml.zip"><i class="fa fa-download"></i> xml.zip</a></li></li>
-			(or)
-			<li>find and edit:</li><br>
-		  <li class="list-group-item">1. <b>core-site.xml</b> and replace with following <b>code:</b>
-		  	<div class="c-card left">
+			<h4>3. Configuration:</h4>
+			<hr>
+			<ul class="list-group">
+			  <li class="list-group-item">
+			  	<ul>
+			  		<li>create new folder <b>data</b> in <code>c:\hadoop-2.8.0\</code></li>
+			  		<li>create new folder <b>datanode</b> in <code>c:\hadoop-2.8.0\data</code></li>
+			  		<li>create new folder <b>namenode</b> in <code>c:\hadoop-2.8.0\data</code></li>
+			  	</ul>
+			  </li>
+			</ul>
+			<br>
+			<h5>Go to <code>c:\hadoop-2.8.0\etc\hadoop\</code></h5>
+			<ul class="list-group">
+				<li>download and replace xml files: <a class="btn btn-success" href="./downloads/xml.zip"><i class="fa fa-download"></i> xml.zip</a></li></li>
+				(or)
+				<li>find and edit:</li><br>
+			  <li class="list-group-item">1. <b>core-site.xml</b> and replace with following <b>code:</b>
+			  	<div class="c-card left">
 <pre><code>
 &lt;<font color="#ec748c">?xml version="1.0" encoding="UTF-8"?</font>&gt;
 &lt;<font color="#ec748c">?xml-stylesheet type="text/xsl" href="configuration.xsl"?</font>&gt;
@@ -102,9 +119,9 @@
 	&lt;<font color="#4CAF50">/property</font>&gt;
 &lt;<font color="#5E8FB4">/configuration</font>&gt;
 </code></pre>
-			</div>
-		  <li class="list-group-item">2. <b>mapred-site.xml</b> and replace with following <b>code:</b><br>
-		  	<div class="c-card left">
+				</div>
+			  <li class="list-group-item">2. <b>mapred-site.xml</b> and replace with following <b>code:</b><br>
+			  	<div class="c-card left">
 <pre><code>
 &lt;<font color="#ec748c">?xml version="1.0" encoding="UTF-8"?</font>&gt;
 &lt;<font color="#ec748c">?xml-stylesheet type="text/xsl" href="configuration.xsl"?</font>&gt;
@@ -115,9 +132,9 @@
 	&lt;<font color="#4CAF50">/property</font>&gt;
 &lt;<font color="#5E8FB4">/configuration</font>&gt;
 </code></pre>
-			</div></li>
-		  <li class="list-group-item">3. <b>hdfs-site.xml</b> and replace with following <b>code:</b>
-		  	<div class="c-card left">
+				</div></li>
+			  <li class="list-group-item">3. <b>hdfs-site.xml</b> and replace with following <b>code:</b>
+			  	<div class="c-card left">
 <pre><code>
 &lt;<font color="#ec748c">?xml version="1.0" encoding="UTF-8"?</font>&gt;
 &lt;<font color="#ec748c">?xml-stylesheet type="text/xsl" href="configuration.xsl"?</font>&gt;
@@ -136,9 +153,9 @@
 	&lt;<font color="#4CAF50">/property</font>&gt;
 &lt;<font color="#5E8FB4">/configuration</font>&gt;
 </code></pre>
-			</div></li>
-		  <li class="list-group-item">4. <b>yarn-site.xml</b> and replace with following <b>code:</b>
-		  	<div class="c-card left">
+				</div></li>
+			  <li class="list-group-item">4. <b>yarn-site.xml</b> and replace with following <b>code:</b>
+			  	<div class="c-card left">
 <pre><code>
 &lt;<font color="#ec748c">?xml version="1.0"?</font>&gt;
 &lt;<font color="#5E8FB4">configuration</font>&gt;
@@ -152,143 +169,145 @@
    &lt;<font color="#4CAF50">/property</font>&gt;
 &lt;<font color="#5E8FB4">/configuration</font>&gt;
 </code></pre>
-			</div></li>
+				</div></li>
 
-		  <li class="list-group-item"><b>format</b> the <b>namenode</b> by running the following command on cmd: <br>
-		  	<div class="c-card">
-			    <code>hdfs namenode -format</code>
-			</div>
-		  </li>
-		</ul>
-		<hr>
-
-
-		<h4>4. Testing:</h4>
-		<hr>
-		<h5>Go to <code>c:\hadoop-2.8.0\sbin\</code></h5>
-		<ul class="list-group">
-			<li class="list-group-item">run <code>start-all.cmd</code> as <b>administrator</b> and make sure all of:
-				<ul>
-					<li><b>yarn-node manager</b></li>
-					<li><b>yarn-resource manager</b></li>
-					<li><b>Namenode</b></li>
-					<li><b>Datanode</b></li>
-				</ul>
-				are running.
-			</li>
-			<li class="list-group-item">find hadoop GUI's at: 
-				<ul>
-					<li><a href="http://localhost:8080" target="_blank">http://localhost:8080</a></li>
-					<li><a href="http://localhost:50070" target="_blank">http://localhost:50070</a></li>
-				</ul>
-			</li>
-		</ul>
-		<hr>
-		<h3>Running Mapreduce on hadoop to count words.</h3>
-		<hr>
-
-		<h4>1. Starting hadoop hdfs:</h4>
-		<hr>
-		<h5>Go to <code>c:\hadoop-2.8.0\sbin\</code></h5>
-		<ul class="list-group">
-			<li class="list-group-item">run <code>start-all.cmd</code> as <b>administrator</b> and make sure all of:
-				<ul>
-					<li><b>yarn-node manager</b></li>
-					<li><b>yarn-resource manager</b></li>
-					<li><b>Namenode</b></li>
-					<li><b>Datanode</b></li>
-				</ul>
-				are running.
-			</li>
-		</ul>
-		<hr>
-
-		<h4>2. Create input file:</h4>
-		<hr>
-		<ul class="list-group">
-			<li class="list-group-item">create a file <code>input_file.txt</code> at <code>c:\</code> and add some content.</li>
-			<li>(or)</li>
-			<li class="list-group-item">download this file: <a class="btn btn-success" href="data:text/plain;charset=UTF-8, ./downloads/input_file.txt" target="_blank" download="input_file.txt"><i class="fa fa-download"></i> input_file.txt</a> and place it in <code>c:\</code></li>
-		</ul>
-		<hr>
-
-
-		<h5>for all of the following : open <code>cmd</code> in <b>administrator mode</b></h5>
-		<hr>
-
-
-		<h4>3. Create input directory in hdfs:</h4>
-		<hr>
-		<ul class="list-group">
-			<li class="list-group-item">using the command:
-				<div class="c-card left">
-					<code>hadoop fs -mkdir /input_dir</code>
+			  <li class="list-group-item"><b>format</b> the <b>namenode</b> by running the following command on cmd: <br>
+			  	<div class="c-card">
+				    <code>hdfs namenode -format</code>
 				</div>
-			</li>
-		</ul>
-		<hr>
+			  </li>
+			</ul>
+			<hr>
 
 
-		<h4>4. Copy input file to hdfs:</h4>
-		<hr>
-		<ul class="list-group">
-			<li class="list-group-item">using the command:
-				<div class="c-card left">
-					<code>hadoop fs -put c:\input_file.txt /input_dir</code>
-				</div>
-			</li>
-		</ul>
-		<hr>
+			<h4>4. Testing:</h4>
+			<hr>
+			<h5>Go to <code>c:\hadoop-2.8.0\sbin\</code></h5>
+			<ul class="list-group">
+				<li class="list-group-item">run <code>start-all.cmd</code> as <b>administrator</b> and make sure all of:
+					<ul>
+						<li><b>yarn-node manager</b></li>
+						<li><b>yarn-resource manager</b></li>
+						<li><b>Namenode</b></li>
+						<li><b>Datanode</b></li>
+					</ul>
+					are running.
+				</li>
+				<li class="list-group-item">find hadoop GUI's at: 
+					<ul>
+						<li><a href="http://localhost:8080" target="_blank">http://localhost:8080</a></li>
+						<li><a href="http://localhost:50070" target="_blank">http://localhost:50070</a></li>
+					</ul>
+				</li>
+			</ul>
+			<hr>
+		</section>
+		<section id="mapred">
+			<h3>Running Mapreduce on hadoop to count words.</h3>
+			<hr>
 
-		<h4>5. Check avalability of input file in hdfs:</h4>
-		<hr>
-		<ul class="list-group">
-			<li class="list-group-item">using the command:
-				<div class="c-card left">
-					<code>hadoop fs -ls /input_dir/</code>
-				</div>
-			</li>
-		</ul>
-		<hr>
+			<h4>1. Starting hadoop hdfs:</h4>
+			<hr>
+			<h5>Go to <code>c:\hadoop-2.8.0\sbin\</code></h5>
+			<ul class="list-group">
+				<li class="list-group-item">run <code>start-all.cmd</code> as <b>administrator</b> and make sure all of:
+					<ul>
+						<li><b>yarn-node manager</b></li>
+						<li><b>yarn-resource manager</b></li>
+						<li><b>Namenode</b></li>
+						<li><b>Datanode</b></li>
+					</ul>
+					are running.
+				</li>
+			</ul>
+			<hr>
 
-		<h4>6. Check content of input file:</h4>
-		<hr>
-		<ul class="list-group">
-			<li class="list-group-item">using the command:
-				<div class="c-card left">
-					<code>hadoop fs -cat /input_dir/input_file.txt</code>
-				</div>
-			</li>
-		</ul>
-		<hr>
+			<h4>2. Create input file:</h4>
+			<hr>
+			<ul class="list-group">
+				<li class="list-group-item">create a file <code>input_file.txt</code> at <code>c:\</code> and add some content.</li>
+				<li>(or)</li>
+				<li class="list-group-item">download this file: <a class="btn btn-success" href="data:text/plain;charset=UTF-8, ./downloads/input_file.txt" target="_blank" download="input_file.txt"><i class="fa fa-download"></i> input_file.txt</a> and place it in <code>c:\</code></li>
+			</ul>
+			<hr>
 
-		<h4>7. Run map-reduce on input_file:</h4>
-		<hr>
-		<ul class="list-group">
-			<li class="list-group-item">make sure the following file is available:
-				<div class="c-card left">
-					<code>c:\hadoop-2.8.0\share\hadoop\mapreduce\<b>hadoop-mapreduce-examples-2.8.0.jar</b></code>
-				</div>
-			</li>
-			<li class="list-group-item">run mapreduce using the command:
-				<div class="c-card left-l">
-					<code>hadoop jar <b>c:\hadoop-2.8.0\share\hadoop\mapreduce\hadoop-mapreduce-examples-2.8.0.jar</b> wordcount /input_dir /output_dir</code>
-				</div>
-			</li>
-		</ul>
-		<hr>
 
-		<h4>8. Output:</h4>
-		<hr>
-		<ul class="list-group">
-			<li class="list-group-item">After execution complete the output can be checked using the command:
-				<div class="c-card left">
-					<code>hadoop fs -cat /output_dir/*</code>
-				</div>
-			</li>
-		</ul>
-		<hr>
+			<h5>for all of the following : open <code>cmd</code> in <b>administrator mode</b></h5>
+			<hr>
 
+
+			<h4>3. Create input directory in hdfs:</h4>
+			<hr>
+			<ul class="list-group">
+				<li class="list-group-item">using the command:
+					<div class="c-card left">
+						<code>hadoop fs -mkdir /input_dir</code>
+					</div>
+				</li>
+			</ul>
+			<hr>
+
+
+			<h4>4. Copy input file to hdfs:</h4>
+			<hr>
+			<ul class="list-group">
+				<li class="list-group-item">using the command:
+					<div class="c-card left">
+						<code>hadoop fs -put c:\input_file.txt /input_dir</code>
+					</div>
+				</li>
+			</ul>
+			<hr>
+
+			<h4>5. Check avalability of input file in hdfs:</h4>
+			<hr>
+			<ul class="list-group">
+				<li class="list-group-item">using the command:
+					<div class="c-card left">
+						<code>hadoop fs -ls /input_dir/</code>
+					</div>
+				</li>
+			</ul>
+			<hr>
+
+			<h4>6. Check content of input file:</h4>
+			<hr>
+			<ul class="list-group">
+				<li class="list-group-item">using the command:
+					<div class="c-card left">
+						<code>hadoop fs -cat /input_dir/input_file.txt</code>
+					</div>
+				</li>
+			</ul>
+			<hr>
+
+			<h4>7. Run map-reduce on input_file:</h4>
+			<hr>
+			<ul class="list-group">
+				<li class="list-group-item">make sure the following file is available:
+					<div class="c-card left">
+						<code>c:\hadoop-2.8.0\share\hadoop\mapreduce\<b>hadoop-mapreduce-examples-2.8.0.jar</b></code>
+					</div>
+				</li>
+				<li class="list-group-item">run mapreduce using the command:
+					<div class="c-card left-l">
+						<code>hadoop jar <b>c:\hadoop-2.8.0\share\hadoop\mapreduce\hadoop-mapreduce-examples-2.8.0.jar</b> wordcount /input_dir /output_dir</code>
+					</div>
+				</li>
+			</ul>
+			<hr>
+
+			<h4>8. Output:</h4>
+			<hr>
+			<ul class="list-group">
+				<li class="list-group-item">After execution complete the output can be checked using the command:
+					<div class="c-card left">
+						<code>hadoop fs -cat /output_dir/*</code>
+					</div>
+				</li>
+			</ul>
+			<hr>
+		</section>
 	</div>
 	<!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
