--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 		  	<h4>1. Download required files:</h4>
 		  	<hr>
 	  		<ul class="list-group list-group-horizontal">
-			  <li class="list-group-item">Download hadoop: <a class="btn btn-success" href="https://drive.google.com/file/d/1VFAvD6GqPwEK0JCBXTxnswqa-IlPTcoV/view?usp=sharing" target="_blank" download><i class="fa fa-download"></i> hadoop-2.8.0.rar</a></li>
+			  <li class="list-group-item">Download hadoop: <a class="btn btn-success" href="https://drive.google.com/open?id=12pVH3JZdXUYdK_5iFDw-saUzLsgWgqws" target="_blank" download><i class="fa fa-download"></i> hadoop-2.8.0.rar</a></li>
 			  <li class="list-group-item">Download java: <a class="btn btn-success" href="https://drive.google.com/file/d/13tmshcIQ5CZs8iVVGiQbO4xwEZRo3wKU/view?usp=sharing" target="_blank" download><i class="fa fa-download"></i> java.zip</a></li>
 			  <li class="list-group-item">Download winutils: <a class="btn btn-success" href="./downloads/winutils-bin.zip"><i class="fa fa-download"></i> winutils-bin.zip</a></li>
 			</ul>
