--- a/index.html
+++ b/index.html
@@ -105,7 +105,13 @@
 			<br>
 			<h5>Go to <code>c:\hadoop-2.8.0\etc\hadoop\</code></h5>
 			<ul class="list-group">
-				<li>download and replace xml files: <a class="btn btn-success" href="./downloads/xml.zip"><i class="fa fa-download"></i> xml.zip</a></li></li>
+				<li>
+					download and replace xml files:
+					<ul class="list-group list-group-horizontal">
+						<li>64-bit: <a class="btn btn-success" href="./downloads/xml-64.zip"><i class="fa fa-download"></i> xml-64.zip</a></li>
+						<li>32-bit: <a class="btn btn-success" href="./downloads/xml-32.zip"><i class="fa fa-download"></i> xml-32.zip</a></li>
+					</ul>
+				</li>
 				(or)
 				<li>find and edit:</li><br>
 			  <li class="list-group-item">1. <b>core-site.xml</b> and replace with following <b>code:</b>
