--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
 				<li>
 					download and replace xml files:
 					<ul class="list-group list-group-horizontal">
-						<li>64-bit: <a class="btn btn-success" href="./downloads/xml-64.zip"><i class="fa fa-download"></i> xml-64.zip</a></li>
-						<li>32-bit: <a class="btn btn-success" href="./downloads/xml-32.zip"><i class="fa fa-download"></i> xml-32.zip</a></li>
+						<li class="list-group-item">64-bit: <a class="btn btn-success" href="./downloads/xml-64.zip"><i class="fa fa-download"></i> xml-64.zip</a></li>
+						<li class="list-group-item">32-bit: <a class="btn btn-success" href="./downloads/xml-32.zip"><i class="fa fa-download"></i> xml-32.zip</a></li>
 					</ul>
 				</li>
 				(or)
