updated index.html java-64

--- a/index.html
+++ b/index.html
@@ -67,9 +67,10 @@
 		  	<hr>
 	  		<ul class="list-group list-group-horizontal">
 			  <li class="list-group-item">Download hadoop: <a class="btn btn-success" href="https://drive.google.com/open?id=12pVH3JZdXUYdK_5iFDw-saUzLsgWgqws" target="_blank" download><i class="fa fa-download"></i> hadoop-2.8.0.tar.gz</a></li>
-			  <li class="list-group-item">Download java: <a class="btn btn-success" href="https://drive.google.com/file/d/13tmshcIQ5CZs8iVVGiQbO4xwEZRo3wKU/view?usp=sharing" target="_blank" download><i class="fa fa-download"></i> java.zip</a></li>
+			  <li class="list-group-item">Download java 64bit: <a class="btn btn-success" href="https://drive.google.com/file/d/13tmshcIQ5CZs8iVVGiQbO4xwEZRo3wKU/view?usp=sharing" target="_blank" download><i class="fa fa-download"></i> java-64.zip</a></li>
+			  <li class="list-group-item">Download java 32bit: <a class="btn btn-success" href="https://drive.google.com/file/d/13tmshcIQ5CZs8iVVGiQbO4xwEZRo3wKU/view?usp=sharing" target="_blank" download><i class="fa fa-download"></i> java-32.zip</a></li>
 			  <li class="list-group-item">Download winutils 64bit: <a class="btn btn-success" href="./downloads/winutils-bin.zip"><i class="fa fa-download"></i> winutils64-bin.zip</a></li>
-				<li class="list-group-item">Download winutils 32bit: <a class="btn btn-success" href="./downloads/winutils-bin.zip"><i class="fa fa-download"></i> winutils32-bin.zip</a></li>			
+			  <li class="list-group-item">Download winutils 32bit: <a class="btn btn-success" href="./downloads/winutils-bin.zip"><i class="fa fa-download"></i> winutils32-bin.zip</a></li>			
 			</ul>
 			<hr>
 
@@ -77,9 +78,9 @@
 		  	<h4>2. Installation and setup:</h4>
 		  	<hr>
 		  	<ul class="list-group">
-			  <li class="list-group-item">Extract <b>hadoop-2.8.0.zip</b> in <code>c:\</code></li>
-			  <li class="list-group-item">Extract <b>java.zip</b> in <code>c:\</code></li>
-			  <li class="list-group-item">Extract <b>winutils-bin.zip</b> in <code>c:\hadoop-2.8.0</code></li>
+			  <li class="list-group-item">Extract <b>hadoop-2.8.0.tar.gz</b> in <code>c:\</code></li>
+			  <li class="list-group-item">Extract <b>java-32.zip/java-64.zip</b> in <code>c:\</code></li>
+			  <li class="list-group-item">Extract <b>winutils64-bin.zip/winutils32-bin.zip</b> in <code>c:\hadoop-2.8.0</code></li>
 			  <li class="list-group-item">set environment variables:
 			  	<ul>
 			  		<li><code>HADOOP_HOME = c:\hadoop-2.8.0</code></li>
