--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 			  <li class="list-group-item">Download hadoop: <a class="btn btn-success" href="https://drive.google.com/open?id=12pVH3JZdXUYdK_5iFDw-saUzLsgWgqws" target="_blank" download><i class="fa fa-download"></i> hadoop-2.8.0.tar.gz</a></li>
 			  <li class="list-group-item">Download java 64bit: <a class="btn btn-success" href="https://drive.google.com/file/d/13tmshcIQ5CZs8iVVGiQbO4xwEZRo3wKU/view?usp=sharing" target="_blank" download><i class="fa fa-download"></i> java-64.zip</a></li>
 			  <li class="list-group-item">Download java 32bit: <a class="btn btn-success" href="https://drive.google.com/file/d/13tmshcIQ5CZs8iVVGiQbO4xwEZRo3wKU/view?usp=sharing" target="_blank" download><i class="fa fa-download"></i> java-32.zip</a></li>
-			  <li class="list-group-item">Download winutils 64bit: <a class="btn btn-success" href="./downloads/winutils-bin.zip"><i class="fa fa-download"></i> winutils64-bin.zip</a></li>
-			  <li class="list-group-item">Download winutils 32bit: <a class="btn btn-success" href="./downloads/winutils-bin.zip"><i class="fa fa-download"></i> winutils32-bin.zip</a></li>			
+			  <li class="list-group-item">Download winutils 64bit: <a class="btn btn-success" href="./downloads/winutils64-bin.zip"><i class="fa fa-download"></i> winutils64-bin.zip</a></li>
+			  <li class="list-group-item">Download winutils 32bit: <a class="btn btn-success" href="./downloads/winutils32-bin.zip"><i class="fa fa-download"></i> winutils32-bin.zip</a></li>			
 			</ul>
 			<hr>
 
