--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 			<ul class="list-group">
 				<li class="list-group-item">create a file <code>input_file.txt</code> at <code>c:\</code> and add some content.</li>
 				<li>(or)</li>
-				<li class="list-group-item">download this file: <a class="btn btn-success" href="data:text/plain;charset=UTF-8, ./downloads/input_file.txt" target="_blank" download="input_file.txt"><i class="fa fa-download"></i> input_file.txt</a> and place it in <code>c:\</code></li>
+				<li class="list-group-item">download this file: <a class="btn btn-success" href="./downloads/input_file.txt" target="_blank" download="input_file.txt" download><i class="fa fa-download"></i> input_file.txt</a> and place it in <code>c:\</code></li>
 			</ul>
 			<hr>
 
