google tracking added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-156563461-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+  		function gtag(){dataLayer.push(arguments);}
+  		gtag('js', new Date());
+
+  		gtag('config', 'UA-156563461-1');
+	</script>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -79,8 +89,8 @@
 		  	<hr>
 		  	<ul class="list-group">
 			  <li class="list-group-item">Extract <b>hadoop-2.8.0.tar.gz</b> in <code>c:\</code></li>
-			  <li class="list-group-item">Extract <b>java-32.zip/java-64.zip</b> in <code>c:\</code></li>
-			  <li class="list-group-item">Extract <b>winutils64-bin.zip/winutils32-bin.zip</b> in <code>c:\hadoop-2.8.0</code></li>
+			  <li class="list-group-item">Extract <b>java-32.zip (or) java-64.zip</b> in <code>c:\</code></li>
+			  <li class="list-group-item">Extract <b>winutils64-bin.zip (or) winutils32-bin.zip</b> in <code>c:\hadoop-2.8.0</code></li>
 			  <li class="list-group-item">set environment variables:
 			  	<ul>
 			  		<li><code>HADOOP_HOME = c:\hadoop-2.8.0</code></li>
